# collager

./: .gitignore  Cargo.toml  README.md
src/: collager.rs  colors.rs  config.rs  imager.rs  main.rs
