[package]
name = "collager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
image = "0.24.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.release-debug]
inherits = "release"
debug = true
